# Validation-and-Monitoring

./: .gitignore  Dockerfile  README.md  destroy_develop.sh  develop.sh  pyproject.toml  requirements.txt  setup.py  solutions.md
app/: main.py
app/api/: event.py
app/core/: config.py
app/data/: input.json  report_events.csv
app/models/: event.py
app/scripts/: event_tools.py
app/tests/: conftest.py
app/tests/integration/api/: test_event.py
app/tests/integration/models/: test_event_model.py
app/tests/integration/scripts/: test_event_tools.py
app/tests/mock_data/: mock_input.json  mock_input2.json
app/tools/scripts/: event_tools.py
