[tool.poetry]
name = "validation-and-monitoring"
version = "0.0.1"
description = "Assignment to validate specific JSON events"
authors = ["Ignacio Betegón <nachogon92@gmail.com>"]
packages = [
    {include="app"}
]

[tool.poetry.scripts]
event_tools = "app.scripts.event_tools:main"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "1.8.2"
pytest = "6.2.5"
fastapi = "0.70.0"
uvicorn = "0.15.0"
langcodes = "3.3.0"
click = "8.0.3"
pytz = "2021.3"
black = "21.11b1"
